--- a/Pipfile
+++ b/Pipfile
@@ -3,14 +3,13 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[dev-packages]
-black = "==19.3b0"
-
 [packages]
-numpy = "*"
-scipy = "*"
-matplotlib = "*"
-jupyter = "*"
+black = "==19.3b0"
+numpy = "==1.17.3"
+scipy = "==1.3.1"
+matplotlib = "==3.1.1"
+jupyter = "==1.0.0"
+ipdb = "==0.12.2"
 
 [requires]
 python_version = "3.7"
